<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>resh.connect</groupId>
        <artifactId>mycall</artifactId>
        <version>0.0.1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>client</artifactId>
    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
        <javafx.version>21.0.2</javafx.version>
        <javafx.platform>win</javafx.platform>
    </properties>

    <dependencies>
        <!-- Spring Boot Starter -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>resh.connect</groupId>
            <artifactId>common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <!-- JavaFX dependencies -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Spring Boot Maven Plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.5.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>resh.connect.mycall.client.ClientApplication</mainClass>
                </configuration>
            </plugin>
            <!-- jpackage Maven Plugin -->
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.6</version>
                <executions>
                    <execution>
                        <id>jpackage</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <name>MyCallClient</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>resh.connect</vendor>
                    <mainJar>${project.build.finalName}.jar</mainJar>
                    <mainClass>org.springframework.boot.loader.launch.JarLauncher</mainClass>
                    <input>${project.build.directory}</input>
                    <destination>${project.build.directory}/installer</destination>
                    <type>EXE</type>
                    <icon>${project.basedir}/src/main/resources/resh.ico</icon>
                    <winShortcut>true</winShortcut>
                    <winMenu>true</winMenu>
                    <javaOptions>
                        <javaOption>-Dloader.main=resh.connect.mycall.client.ClientApplication</javaOption>
                        <javaOption>--enable-preview</javaOption>
                    </javaOptions>
                    <winConsole>true</winConsole>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
